Corrected setup of secure pair-wise channels between the computational parties which has not been previously done correctly and other small fixes

--- a/compiler/src/seed/makefile
+++ b/compiler/src/seed/makefile
@@ -1,3 +1,3 @@
 all:
-	gcc -g seed.cpp SecretShare.cpp PRSS.cpp -o picco-seed -lssl -lgmp -lboost_system
+	g++ -g seed.cpp SecretShare.cpp PRSS.cpp -o picco-seed -lssl -lgmp -lboost_system
 
