--- a/compiler/src/seed/makefile
+++ b/compiler/src/seed/makefile
@@ -1,3 +1,3 @@
 all:
-	g++ -g seed.cpp SecretShare.cpp PRSS.cpp -o picco-seed -lssl -lgmp -lboost_system
+	g++ -g seed.cpp SecretShare.cpp PRSS.cpp -o picco-seed -lssl -lcrypto -lgmp -lboost_system
 
