--- a/compute/makefile
+++ b/compute/makefile
@@ -36,8 +36,9 @@ endif
 # All Target
 test-code: $(OBJS) $(USER_OBJS) 
 	g++ -c -w test-code.cpp 
-	#g++ -o test-code test-code.o  $(OBJS) $(USER_OBJS) $(LIBS)  
-	g++ -o test-code test-code.o  -I/afs/nd.edu/user2/yzhang16/include/ompi $(OBJS) $(USER_OBJS) $(LIBS) -L/afs/nd.edu/user2/yzhang16/lib/ompi -L/afs/nd.edu/user2/yzhang16/lib/ompi/default -lort -lrt -lpthread -lboost_thread-mt 
+	g++ -o test-code test-code.o $(OBJS) $(USER_OBJS) $(LIBS) 
+# replace the line above with this one for multi-threaded programs
+#	g++ -o test-code test-code.o -I ./ompi/include/ompi $(OBJS) $(USER_OBJS) $(LIBS) -L ./ompi/lib/ompi -L ./ompi/lib/ompi/default -lort -lrt -lboost_thread 
 
 clean:
 	-$(RM) *.o test-code
