--- a/compiler/src/utility/makefile
+++ b/compiler/src/utility/makefile
@@ -1,3 +1,3 @@
 all:
-	g++ -g utility.cpp ../seed/SecretShare.cpp -o picco-utility  -lssl -lgmp -lboost_system
+	g++ -g utility.cpp ../seed/SecretShare.cpp -o picco-utility  -lssl -lgmp
 
