eliminated compilation warnings and other corrections

--- a/compiler/src/seed/makefile
+++ b/compiler/src/seed/makefile
@@ -1,3 +1,3 @@
 all:
-	g++ -g seed.cpp SecretShare.cpp PRSS.cpp -o picco-seed -lssl -lcrypto -lgmp
+	g++ -g seed.cpp SecretShare.cpp PRSS.cpp -o picco-seed -lssl -lcrypto -ldl -lgmp
 
