--- a/compute/CMakeLists.txt
+++ b/compute/CMakeLists.txt
@@ -65,6 +65,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 INCLUDE_DIRECTORIES(
   "${GMP_INCLUDES}"
   "${CMAKE_SOURCE_DIR}/smc-compute"
+  "${CMAKE_SOURCE_DIR}/smc-compute/shamir"
   "${CMAKE_SOURCE_DIR}/smc-compute/ops/shamir"
 )
 
@@ -74,14 +75,13 @@ file(GLOB SOURCES
       # "smc-compute/ops/shamir*.cpp"
 )
 
-
-file(GLOB SOURCES 
-      "smc-compute/*.cpp"
-      # "smc-compute/ops/shamir*.cpp"
+file(GLOB RSS 
+      "smc-compute/ops/rss/*.cpp"
 )
 
 file(GLOB SHAMIR 
       # "smc-compute/*.cpp"
+      "smc-compute/shamir/*.cpp"
       "smc-compute/ops/shamir/*.cpp"
 )
 
