--- a/compiler/src/utility/makefile
+++ b/compiler/src/utility/makefile
@@ -1,3 +1,2 @@
 all:
-	g++ -g utility.cpp ../seed/SecretShare.cpp -o picco-utility  -lssl -lgmp
-
+	g++ -g utility.cpp SecretShare.cpp -o picco-utility -lssl -lgmp
