--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ CMakeLists.txt
 compute/steps.sh
 compute/sample-programs/non-thread/priv-global-tester-data
 compute/sample-programs/non-thread/priv-global-tester-data2
+compute/Testing
+compute/picco_script.sh
