macOS compatibility changes: - including types.h for uint - adding SSE2 header implementation

--- a/compiler/src/utility/makefile
+++ b/compiler/src/utility/makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -g utility.cpp SecretShare.cpp -o picco-utility -lssl -lcrypto -lgmp -maes
+	g++ -g utility.cpp SecretShare.cpp -o picco-utility -lssl -lcrypto -lgmp -maes -std=c++17
