switching cxx standard

--- a/compute/CMakeLists.txt
+++ b/compute/CMakeLists.txt
@@ -4,7 +4,8 @@ cmake_minimum_required(VERSION 3.0.0)
 # set(CMAKE_CXX_COMPILER "g++")
 project(compiled_program LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
+# set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "-maes -mavx -mavx2 -march=native -g3 -Wall -O0")
 set(CMAKE_CXX_FLAGS_DEBUG "-g3 -Wall")
 set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG")
