Added support for array comparissons, private and public comparissons, and updated the batch functionality to only assign the arrays as needed. Two new FLLTZ functions are added to handle comparissons between private and public. I have to push the code cause there is so many and I don't want to lose it, but everything is not fully tested.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ shares/
 
 compute/Error-Limitations/
 compute/running_files
+compute/RSS_Testing.c
+compute/rss_test.c
+compute/rss_test_data
+compute/compile-usr-prog.sh
+compute/CMakeLists.txt
