--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ shares/
 
 compute/Error-Limitations/
 compute/running_files
+compute/Testing
+compute/picco_script.sh
+compute/test_utility_conf
+compute/test_utility.cpp
+compute/steps.sh
